# xgalois

./: .bazelrc  .clang-tidy  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel
benchmark/gf_binary_extension/: run_benchmark.sh
benchmark/gf_binary_extension/results/: BENCHMARK_REPORT.md  BENCHMARK_REPORT_OPT.md  results.csv  results_opt.csv
benchmark/gf_binary_extension/src/: BUILD.bazel  gf_binary_extension_benchmark.cpp
benchmark/gf_prime/: run_benchmark.sh
benchmark/gf_prime/results/: BENCHMARK_REPORT.md  results.csv
benchmark/gf_prime/src/: BUILD.bazel  gf_prime_benchmark.cpp
benchmark/simulation/: BUILD.bazel  zech_add_simulation.cpp  zech_div_simulation.cpp  zech_inv_simulation.cpp  zech_mul_simulation.cpp  zech_pow_simulation.cpp
doc/: build.sh  conf.py  dev_guide.rst  index.rst  installation.rst  tutorial.rst
doc/_static/css/: custom.css
example/: BUILD.bazel
example/channel/: channel_example.cpp
example/coding/: coding_example.cpp
example/field/: gf_binary_example.cpp  gf_extension_example.cpp  gf_factory_example.cpp  gf_prime_example.cpp
example/linalg/: linalg_example.cpp
example/poly/: poly_example.cpp
test/: BUILD.bazel
test/channel/: channel_test.cpp
test/coding/: coding_test.cpp
test/databases/: interface_test.cpp
test/field/: gf_binary_test.cpp  gf_element_test.cpp  gf_extension_test.cpp  gf_factory_test.cpp  gf_prime_test.cpp
test/linalg/: linalg_binary_test.cpp  linalg_prime_test.cpp
test/poly/: poly_dense_test.cpp
test/utils/: field_test.cpp  math_test.cpp  poly_test.cpp
xgalois/: BUILD.bazel
xgalois/channel/: channel.hpp
xgalois/coding/: abstract_code.hpp  abstract_linear_code.hpp  coding.hpp  cyclic_code.hpp  grs.hpp
xgalois/coding/decoder/: decoder.hpp  grs_decoder.hpp  syndrome_decoder.hpp
xgalois/coding/encoder/: encoder.hpp  generator_matrix_encoder.hpp  grs_encoder.hpp
xgalois/databases/: interface.hpp  irreducible_polys.db  prime_factors.db
xgalois/field/: gf_base.hpp  gf_binary.hpp  gf_element.hpp  gf_extension.hpp  gf_factory.hpp  gf_prime.hpp
xgalois/linalg/: linalg.hpp
xgalois/poly/: poly_dense.hpp
xgalois/utils/: field.hpp  math.hpp  poly.hpp
