"""
XGalois Bazel module configuration.
This module defines dependencies and build rules for the XGalois project.
"""

module(
    name = "xgalois",
    version = "0.1.0",
)

bazel_dep(name = "apple_support", version = "1.22.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "google_benchmark", version = "1.9.1")

